force-app/main/default/objects/Annual_Sales_Plan_Items__c/Annual_Sales_Plan_Items__c.object-meta.xml
<CustomObject>
    <label>Annual Sales Plan Items</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Annual Sales Plan Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Sales Plan Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>