force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Aggregators_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Aggregators_Status_Update__c</fullName>
    <label>Aggregators Status Update</label>
    <length>90</length>
    <type>Text</type>
</CustomField>