force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Annual_Sales_Plan__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Plan__c</fullName>
    <label>Annual Sales Plan</label>
    <referenceTo>Annual_Sales_Plan__c</referenceTo>
    <relationshipName>Proposed_Conference_Attendance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>