force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Approved_Aggregator_Name__c.field-meta.xml
<CustomField>
    <fullName>Approved_Aggregator_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved Aggregator Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Association</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Aggregator</value>
        </filterItems>
        <filterItems>
            <field>Account.Approved__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Annual Sales Plan Items (Approved Aggregator Name)</relationshipLabel>
    <relationshipName>Annual_Sales_Plan_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>