force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Attending__c.field-meta.xml
<CustomField>
    <fullName>Attending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attending</label>
    <type>Checkbox</type>
</CustomField>