force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>Advancement</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Career Services</fullName>
            </value>
            <value>
                <fullName>Enrollment Management</fullName>
            </value>
            <value>
                <fullName>Financial Aid</fullName>
            </value>
            <value>
                <fullName>Registrar</fullName>
            </value>
            <value>
                <fullName>Student Life</fullName>
            </value>
            <value>
                <fullName>Veterans Affairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>