force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Conference_Name__c.field-meta.xml
<CustomField>
    <fullName>Conference_Name__c</fullName>
    <label>Conference Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>