force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Conference_Name_Presentation_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Conference_Name_Presentation_Proposed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conference Name/Presentation Proposed</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Conference</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Annual Sales Plan Items</relationshipLabel>
    <relationshipName>Annual_Sales_Plan_Items</relationshipName>
    <type>Lookup</type>
</CustomField>