force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Dates__c.field-meta.xml
<CustomField>
    <fullName>Dates__c</fullName>
    <label>Dates</label>
    <type>Date</type>
</CustomField>