force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/of_Targets_in_Territory__c.field-meta.xml
<CustomField>
    <fullName>of_Targets_in_Territory__c</fullName>
    <label># of Targeted Schools in Territory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>