force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Annual Sales Plan Items</relationshipLabel>
    <relationshipName>Annual_Sales_Plan_Items</relationshipName>
    <type>Lookup</type>
</CustomField>