force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/PCA_Record__c.field-meta.xml
<CustomField>
    <fullName>PCA_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCA Record</label>
    <type>Checkbox</type>
</CustomField>