force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Presenting__c.field-meta.xml
<CustomField>
    <fullName>Presenting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presenting</label>
    <type>Checkbox</type>
</CustomField>