force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Proposed__c.field-meta.xml
<CustomField>
    <fullName>Proposed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposed</label>
    <type>Checkbox</type>
</CustomField>