force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Annual Sales Plan Items</relationshipLabel>
    <relationshipName>Annual_Sales_Plan_Items</relationshipName>
    <type>Lookup</type>
</CustomField>