force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Target_Aggregator_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Aggregator_Name__c</fullName>
    <label>Target Aggregator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>