force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Target_ESSS_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Target_ESSS_Status_Update__c</fullName>
    <label>Target ESSS Status Update</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting signed contract</fullName>
            </value>
            <value>
                <fullName>Providing Proposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>