force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Target_Record__c.field-meta.xml
<CustomField>
    <fullName>Target_Record__c</fullName>
    <label>Target Record</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Target ESSS Schools</fullName>
            </value>
            <value>
                <fullName>Target School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>