force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Total_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrollments__c</fullName>
    <label>Total Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>