force-app/main/default/objects/Annual_Sales_Plan_Items__c/fields/Total_Membership__c.field-meta.xml
<CustomField>
    <fullName>Total_Membership__c</fullName>
    <label>Total Membership</label>
    <length>120</length>
    <type>Text</type>
</CustomField>